# AoC-Rust

./: .gitignore  Cargo.toml  README.md  bench-times.txt  bench.sh  fetch-inputs.sh  justfile
2023/: Cargo.toml  README.md  justfile
2023/src/: day1.rs  lib.rs
2024/: justfile
2024/src/: day1.rs  day10.rs  day11.rs  day12.rs  day14.rs  day15.rs  day16.rs  day18.rs  day2.rs  day20.rs  day4.rs  day5.rs  day6.rs  day8.rs  day9.rs  lib.rs  tests.rs
2025/: Cargo.toml  README.md  benches.txt  justfile
2025/src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
_template/: cookiecutter.json
_template/{{cookiecutter.year}}/: Cargo.toml  README.md  justfile
_template/{{cookiecutter.year}}/src/: lib.rs
aoc-utils/: Cargo.toml
aoc-utils/src/: common.rs
results/: bench-results.txt
scripts/: bench.sh  run.sh
src/: common.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  lib.rs  parsers.rs  tests.rs
