[package]
name = "aoc-2023-rust"
version = "0.1.0"
edition = "2024"


[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
aoc-utils = { version = "0.1.0", path = "../aoc-utils" }
fxhash = "0.2.1"
num-bigint = "0.4.6"
num-traits = { version = "0.2.19", features = ["i128"] }
pad = "0.1.6"
pathfinding = "4.13.0"
rayon = "1.10.0"
realistic = "0.8.1"
regex = { version = "1.11.1", features = ["perf-dfa-full"] }
rust-crypto = "0.2.36"
